--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
+    "test": "jest --verbose --watchAll",
     "start": "npm run prod:start",
-    "prod:start": "NODE_ENV=production node src/server/index.js",
+    "prod:start": "NODE_ENV=production node src/server/server.js",
     "prod:build": "webpack --config webpack/prod.config.js",
     "dev": "concurrently 'npm:dev:build' 'npm:dev:start'",
-    "dev:start": "NODE_ENV=development nodemon --inspect src/server/server.js",
+    "dev:start": "NODE_ENV=development nodemon --inspect -r esm src/server/server.js",
     "dev:build": "webpack-dev-server  --config webpack/dev.config.js --open"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "webpack": "^4.35.3",
@@ -42,6 +43,7 @@
     "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
+    "jest-esm-transformer": "^1.0.0",
     "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^4.14.1",
