--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "travel-app",
-  "jest": {
-    "automock": false,
-    "setupFiles": [
-      "./setupJest.js"
-    ]
-  },
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --watchAll",
+    "lint": "eslint src --ext .js --ignore-pattern='node_modules'",
     "start": "npm run prod:start",
     "prod:start": "NODE_ENV=production node src/server/server.js",
     "prod:build": "webpack --config webpack/prod.config.js",
@@ -40,15 +35,19 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
     "jest-esm-transformer": "^1.0.0",
-    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "prettier": "^2.2.1",
     "sass": "^1.32.6",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
